deploy/_backup/ingress.yml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cloud-local
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service # service name
            port:
              number: 80
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 81
